--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,8 +2,10 @@ appname = myblog
 httpport = 8080
 runmode = dev
 mysqluser = "root"
-mysqlpass = "123456"
-mysqlurls = "127.0.0.1:3306"
+#mysqlpass = "qwer@123"
+        mysqlpass = "123456"
+        mysqlurls = "127.0.0.1:3306"
+#        mysqlurls = "116.62.68.142:3306"
 mysqldb   = "blog"
 autorender = false
 EnableAdmin = true
